--- a/Alexandria.net/Alexandria.net.csproj
+++ b/Alexandria.net/Alexandria.net.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Serilog" Version="2.7.2-dev-01005" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.1.0-dev-10193" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="API\SphTxApi.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Logging" />
   </ItemGroup>
 </Project>
