--- a/Alexandria.net/Alexandria.net.csproj
+++ b/Alexandria.net/Alexandria.net.csproj
@@ -9,11 +9,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Serilog" Version="2.7.2-dev-01005" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.1.0-dev-10193" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.1-dev-00922" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00796" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.1-dev-00155" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="API\SphTxApi.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logging" />
   </ItemGroup>
 </Project>
