--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Test/UnitTest/obj/project.assets.json
 Test/UnitTest/obj/project.assets.json
 Test/UnitTest/obj/project.packagespec.json
 Test/UnitTest/obj/project.assets.json
+Alexandria.net.sln.DotSettings.user
