--- a/Alexandria.net/Alexandria.net.csproj
+++ b/Alexandria.net/Alexandria.net.csproj
@@ -7,7 +7,7 @@
     <AssemblyTitle>Alexandria.net</AssemblyTitle>
     <Description>.net library for accessing the SophiaTX Blockchain</Description>
     <Copyright>Equidato Technologies AG</Copyright>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>net452;net462;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\netcoreapp2.0\Alexandria.net.xml</DocumentationFile>
