changes tasync method calls

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,18 @@ Test/UnitTest/obj/project.assets.json
 Test/UnitTest/obj/project.packagespec.json
 Test/UnitTest/obj/project.assets.json
 Alexandria.net.sln.DotSettings.user
+/.vs
+/Alexandria.net/bin
+/Alexandria.net/obj
+/Alexandria.net/Alexandria.net.1.0.3.3.nupkg
+/Alexandria.net/Alexandria.net.1.0.3.2.nupkg
+/Alexandria.net/Alexandria.net.1.0.3.1.nupkg
+/Alexandria.net/nuget.exe
+/packages
+/Test/obj
+/Test/UnitTest/bin
+/Test/UnitTest/obj
+/UnitTestProject452/bin
+/UnitTestProject452/obj
+/UnitTestProject462/bin
+/UnitTestProject462/obj
