--- a/Alexandria.net/Alexandria.net.csproj
+++ b/Alexandria.net/Alexandria.net.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.0.3</Version>
+    <Version>1.0.3.3</Version>
     <Authors>Martyn Cranfield Harler;Saniv Jha</Authors>
     <Company>Equidato Technologies AG</Company>
     <NeutralLanguage>en-US</NeutralLanguage>
@@ -8,6 +8,7 @@
     <Description>.net library for accessing the SophiaTX Blockchain</Description>
     <Copyright>Equidato Technologies AG</Copyright>
     <TargetFrameworks>net452;net462;netcoreapp2.0</TargetFrameworks>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\netcoreapp2.0\Alexandria.net.xml</DocumentationFile>
