--- a/Alexandria.net/Alexandria.net.nuspec
+++ b/Alexandria.net/Alexandria.net.nuspec
@@ -2,18 +2,18 @@
 <package >
   <metadata>
     <id>Alexandria.net</id>
-    <version>1.0.3</version>
+    <version>1.0.3.3</version>
     <title>Alexandria</title>
     <authors>Martyn Harler, Sanjiv Jha</authors>
     <owners>Martyn Harler</owners>
-    <licenseUrl>https://www.sophiatx.com</licenseUrl>
+    <licenseUrl>https://www.sophiatx.com/storage/web/SophiaTX_Terms_of_Use_180523_EY.pdf?_t=1527171255</licenseUrl>
     <projectUrl>https://github.com/SophiaTX/Alexandria</projectUrl>
     <iconUrl>https://www.sophiatx.com/wp-content/uploads/2018/04/SophiaTX-Symbol-cut.png</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>.Net Library for SophiaTX Blockchain</description>
     <releaseNotes>Added platform dependent native libraries.</releaseNotes>
     <copyright>Copyright 2018</copyright>
-    <tags>Sophiatx.net Alexandria Alexandria.net</tags>
+    <tags>Sophiatx.com Alexandria Alexandria.net</tags>
     
     <dependencies>
       <dependency id="Newtonsoft.Json" version="11.0.2"></dependency>
@@ -28,11 +28,15 @@
   </metadata>
  
   <files>
-    <file src="lib\*.*" target="lib" />
+    <file src="lib\x64\*.*" target="lib" />
+    
     <file src="build\Alexandria.net.targets" target="build" />
-    <file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file
-    <file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>
-    <file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>
-    <file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>
+    <!--<file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>-->
+    <file src="bin\x64\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>
+    <file src="bin\x64\Release\net452\Alexandria.net.dll" target="lib\net452\Alexandria.net.dll"></file>
+    <file src="bin\x64\Release\net462\Alexandria.net.dll" target="lib\net462\Alexandria.net.dll"></file>
+    <!--<file src="bin\x86\Debug\net452\Alexandria.net.dll" target="lib\net452\Alexandria.net.dll"></file>
+    <file src="bin\x86\Debug\net462\Alexandria.net.dll" target="lib\net462\Alexandria.net.dll"></file>-->
+
   </files>
 </package>
