--- a/UnitTestProject452/packages.config
+++ b/UnitTestProject452/packages.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alexandria.net" version="1.0.3.4" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Serilog" version="2.7.1" targetFramework="net452" />
+  <package id="Serilog.Extensions.Logging" version="2.0.2" targetFramework="net452" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net452" />
+  <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net452" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net452" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net452" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net452" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net452" />
 </packages>
