--- a/UnitTestProject462/packages.config
+++ b/UnitTestProject462/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alexandria.net" version="1.0.3.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net462" />
