--- a/Alexandria.net/logging.config
+++ b/Alexandria.net/logging.config
@@ -1,6 +1,6 @@
 ﻿<log4net>
     <appender name="GelfUdpAppenderCC" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender">
-        <remoteAddress value="https://graylog.sophiatx.com" />
+        <remoteAddress value="https://logging.sophiatx.com" />
         <remotePort value="12201" />
         <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core">
             <param name="AdditionalFields" value="app:DotnetcoreUdpAppenderCC,version:1.0,Environment:Dev,Level:%level" />
@@ -11,7 +11,7 @@
     </appender>
 
     <appender name="GelfUdpAppender" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender">
-        <remoteAddress value="https://graylog.sophiatx.com" />
+        <remoteAddress value="https://logging.sophiatx.com" />
         <remotePort value="12201" />
         <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core">
             <param name="AdditionalFields" value="app:DotnetcoreUdpAppender,version:1.0,Environment:Dev,Level:%level" />
