--- a/Test/UnitTest/UnitTest.csproj
+++ b/Test/UnitTest/UnitTest.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="xunit.runner.console" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Alexandria.net\Alexandria.net.csproj" />
+  </ItemGroup>
 </Project>
