--- a/Alexandria.net/Alexandria.net.nuspec
+++ b/Alexandria.net/Alexandria.net.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Alexandria.net</id>
-    <version>1.0.3.3</version>
+    <version>1.0.3.7</version>
     <title>Alexandria</title>
     <authors>Martyn Harler, Sanjiv Jha</authors>
     <owners>Martyn Harler</owners>
@@ -10,11 +10,11 @@
     <projectUrl>https://github.com/SophiaTX/Alexandria</projectUrl>
     <iconUrl>https://www.sophiatx.com/wp-content/uploads/2018/04/SophiaTX-Symbol-cut.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>.Net Library for SophiaTX Blockchain</description>
+    <description>X64 .Net Library for SophiaTX Blockchain, release covers .netcore 2.0, .netframework 4.5.2 and .net framework 4.6.2</description>
     <releaseNotes>Added platform dependent native libraries.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>Sophiatx.com Alexandria Alexandria.net</tags>
-    
+
     <dependencies>
       <dependency id="Newtonsoft.Json" version="11.0.2"></dependency>
       <dependency id="Serilog" version="2.7.1"></dependency>
@@ -22,21 +22,33 @@
       <dependency id="Serilog.Formatting.Compact" version="1.0.0"></dependency>
       <dependency id="Serilog.Sinks.File" version="4.0.0"></dependency>
       <dependency id="Serilog.Sinks.Seq" version="4.0.0"></dependency>
-
     </dependencies>
-
   </metadata>
- 
+
   <files>
+  <!--   <file src="build\Alexandria.net.targets" target="build\native"/> -->
+  <!--   <file src="lib\x64\*.*" target="lib"/> -->
+  <!--   <file src="lib\x86\*.*" target="lib"/> -->
+  <!--   <file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="runtimes\netcoreapp2.0\Alexandria.net.dll"></file> -->
+  <!--   <file src="bin\x64\Release\net462\Alexandria.net.dll" target="runtimes\win10-x64\lib\net462\Alexandria.net.dll"></file> -->
+  <!--   <file src="bin\x86\Release\net462\Alexandria.net.dll" target="runtimes\win10-x86\lib\net462\Alexandria.net.dll"></file> -->
+  <!--   <file src="bin\x64\Release\net452\Alexandria.net.dll" target="runtimes\win10-x64\lib\net452\Alexandria.net.dll"></file> -->
+  <!--   <file src="bin\x86\Release\net452\Alexandria.net.dll" target="runtimes\win10-x86\lib\net452\Alexandria.net.dll"></file> -->
+
+
+
     <file src="lib\x64\*.*" target="lib" />
-    
-    <file src="build\Alexandria.net.targets" target="build" />
-    <!--<file src="bin\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>-->
+
     <file src="bin\x64\Release\netcoreapp2.0\Alexandria.net.dll" target="lib\netcoreapp2.0\Alexandria.net.dll"></file>
-    <file src="bin\x64\Release\net452\Alexandria.net.dll" target="lib\net452\Alexandria.net.dll"></file>
+
     <file src="bin\x64\Release\net462\Alexandria.net.dll" target="lib\net462\Alexandria.net.dll"></file>
-    <!--<file src="bin\x86\Debug\net452\Alexandria.net.dll" target="lib\net452\Alexandria.net.dll"></file>
-    <file src="bin\x86\Debug\net462\Alexandria.net.dll" target="lib\net462\Alexandria.net.dll"></file>-->
+
+    <file src="bin\x64\Release\net452\Alexandria.net.dll" target="lib\net452\Alexandria.net.dll"></file>
+
+    <file src="build\x64\Alexandria.net.targets" target="build" />
+
 
   </files>
+
+
 </package>
