--- a/Alexandria.net/logging.config
+++ b/Alexandria.net/logging.config
@@ -1,28 +1,78 @@
-﻿<log4net>
-    <appender name="GelfUdpAppenderCC" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender">
-        <remoteAddress value="https://logging.sophiatx.com" />
-        <remotePort value="12201" />
-        <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core">
-            <param name="AdditionalFields" value="app:DotnetcoreUdpAppenderCC,version:1.0,Environment:Dev,Level:%level" />
-            <param name="Facility" value="SimpleDotnetcoreConsoleApplicationUdpPackage" />
-            <param name="IncludeLocationInformation" value="true" />
-            <param name="ConversionPattern" value="[%t] %c{1} - %m" />
-        </layout>
-    </appender>
+﻿<?xml version="1.0"?>
+<configuration>
+    <configSections>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    </configSections>
 
-    <appender name="GelfUdpAppender" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender">
-        <remoteAddress value="https://logging.sophiatx.com" />
-        <remotePort value="12201" />
-        <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core">
-            <param name="AdditionalFields" value="app:DotnetcoreUdpAppender,version:1.0,Environment:Dev,Level:%level" />
-            <param name="Facility" value="SimpleDotnetcoreConsoleApplicationUdpPackage" />
-            <param name="IncludeLocationInformation" value="true" />
-        </layout>
-    </appender>
+    <log4net>
+        <appender name="GelfUdpAppenderCC" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net">
+            <remoteAddress value="logging.sophiatx.com" />
+            <remotePort value="12205" />
+            <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net">
+                <param name="AdditionalFields" value="app:UdpAppenderCC,version:1.0,Environment:Dev,Level:%level" />
+                <param name="Facility" value="RandomPhrases" />
+                <param name="IncludeLocationInformation" value="true" />
+                <param name="SendTimeStampAsString" value="true"/>
+                <!-- Sets the full_message and short_message to the specified pattern-->
+                <param name="ConversionPattern" value="[%t] %c{1} - %m" />
+            </layout>
+        </appender>
 
-    <root>
-        <level value="ALL" />
-        <appender-ref ref="GelfUdpAppender" />
-        <appender-ref ref="GelfUdpAppenderCC" />
-    </root>
-</log4net>
+        <appender name="GelfUdpAppender" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net">
+            <remoteAddress value="logging.sophiatx.com" />
+            <remotePort value="12205" />
+            <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net">
+                <param name="AdditionalFields" value="app:UdpAppender,version:1.0,Environment:Dev,Level:%level" />
+                <param name="Facility" value="RandomPhrases" />
+                <param name="IncludeLocationInformation" value="true" />
+                <param name="SendTimeStampAsString" value="false"/>
+            </layout>
+        </appender>
+
+        <appender name="AsyncGelfUdpAppender" type="Gelf4Net.Appender.AsyncGelfUdpAppender, Gelf4Net">
+            <remoteAddress value="logging.sophiatx.com" />
+            <remotePort value="12205" />
+            <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net">
+                <param name="AdditionalFields" value="app:AsyncUdpAppender,version:1.0,Environment:Dev,Level:%level" />
+                <param name="Facility" value="RandomPhrases" />
+                <param name="IncludeLocationInformation" value="true" />
+                <param name="SendTimeStampAsString" value="true"/>
+            </layout>
+        </appender>
+
+        <root>
+            <level value="ALL" />
+            <appender-ref ref="GelfUdpAppender" />
+            <appender-ref ref="GelfUdpAppenderCC" />
+            <appender-ref ref="AsyncGelfUdpAppender" />
+        </root>
+    </log4net>
+</configuration>
+<!-- <log4net> -->
+<!--     <appender name="GelfUdpAppenderCC" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender"> -->
+<!--         <remoteAddress value="https://logging.sophiatx.com" /> -->
+<!--         <remotePort value="12201" /> -->
+<!--         <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core"> -->
+<!--             <param name="AdditionalFields" value="app:DotnetcoreUdpAppenderCC,version:1.0,Environment:Dev,Level:%level" /> -->
+<!--             <param name="Facility" value="SimpleDotnetcoreConsoleApplicationUdpPackage" /> -->
+<!--             <param name="IncludeLocationInformation" value="true" /> -->
+<!--             <param name="ConversionPattern" value="[%t] %c{1} - %m" /> -->
+<!--         </layout> -->
+<!--     </appender> -->
+<!-- -->
+<!--     <appender name="GelfUdpAppender" type="Gelf4Net.Appender.GelfUdpAppender, Gelf4Net.UdpAppender"> -->
+<!--         <remoteAddress value="https://logging.sophiatx.com" /> -->
+<!--         <remotePort value="12201" /> -->
+<!--         <layout type="Gelf4Net.Layout.GelfLayout, Gelf4Net.Core"> -->
+<!--             <param name="AdditionalFields" value="app:DotnetcoreUdpAppender,version:1.0,Environment:Dev,Level:%level" /> -->
+<!--             <param name="Facility" value="SimpleDotnetcoreConsoleApplicationUdpPackage" /> -->
+<!--             <param name="IncludeLocationInformation" value="true" /> -->
+<!--         </layout> -->
+<!--     </appender> -->
+<!-- -->
+<!--     <root> -->
+<!--         <level value="ALL" /> -->
+<!--         <appender-ref ref="GelfUdpAppender" /> -->
+<!--         <appender-ref ref="GelfUdpAppenderCC" /> -->
+<!--     </root> -->
+<!-- </log4net> -->
