nuspec files updated

--- a/Alexandria.net/Alexandria.netx64.nuspec
+++ b/Alexandria.net/Alexandria.netx64.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Alexandria.net-x64</id>
+    <id>Alexandria.net</id>
     <version>1.0.3.8</version>
     <title>Alexandria</title>
     <authors>Martyn Harler, Sanjiv Jha</authors>
