--- a/Alexandria.net/Alexandria.netx64.nuspec
+++ b/Alexandria.net/Alexandria.netx64.nuspec
@@ -22,6 +22,7 @@
       <dependency id="Serilog.Formatting.Compact" version="1.0.0"></dependency>
       <dependency id="Serilog.Sinks.File" version="4.0.0"></dependency>
       <dependency id="Serilog.Sinks.Seq" version="4.0.0"></dependency>
+      <dependency id="Serilog.Sinks.Graylog" version="1.0.0"></dependency>
     </dependencies>
   </metadata>
 
